@@ -35,8 +35,10 @@ jargon.io.internal.cache.buffer.size=65535
 jargon.io.send.input.stream.buffer.size=0
 #  size of the buffer used in read/write operations (read into, and write from this buffer in the read/write loop).
 jargon.io.input.to.output.copy.byte.buffer.size=8192
-# size of buffer used in output stream to a local file  (0 = use defaults, -1 = do not wrap with buffered input stream)
+# size of buffer used in output stream to a local file  (0 = use defaults, -1 = do not wrap with buffered output stream)
 jargon.io.local.output.stream.buffer.size=0
+# size of buffer used in input stream from a local file  (0 = use defaults, -1 = do not wrap with buffered input stream)
+jargon.io.local.input.stream.buffer.size=0
 # size of buffer used in put operations (file segment size per call to DataObjInp)
 jargon.put.buffer.size=4194304
 # size of buffer used in get operations (file segment size per call to DataObjInp)
